Fixed a GitHub link.

--- a/app/templates/contribute.jade
+++ b/app/templates/contribute.jade
@@ -59,7 +59,9 @@ block content
         | We can't and don't want to do that alone;
         | what makes projects like GitHub, Stack Overflow and Linux great are the people who
         | use them and build on them.
-        | To that end, we aim to provide as many ways as possible for you to take part and
+        | To that end, 
+        a(href="https://github.com/codecombat/codecombat") CodeCombat is totally open source
+        | , and we aim to provide as many ways as possible for you to take part and
         | make this project as much yours as ours.
       p We hope you'll join our party!
       p.signature - Nick, George and Scott
@@ -85,13 +87,7 @@ block content
         | and server administration to user facing design and interface building. 
         | There's a lot to do, and if you're an experienced programmer with a hankering
         | to really dive into the nitty-gritty of CodeCombat, this class might be for you.
-
-      p Right now we have open-sourced two of our tools on the project: 
-        a(href="https://github.com/codecombat/aether") Aether
-        |  and 
-        a(href="https://github.com/codecombat/treema") Treema
-        | . We are also open sourcing everything momentarily, so stay tuned for access to the main repo!
-        | We would love to have your help building out the best programming game ever.
+        | We would love to have your help building the best programming game ever.
     
       h4 Class Attributes
       ul
@@ -107,7 +103,7 @@ block content
       
       p
         | Anyone can help out! Just check out our 
-        a(title='GitHub', tabindex=-1) GitHub
+        a(title='GitHub', href="https://github.com/codecombat/codecombat", tabindex=-1) GitHub
         |  to get started, and check the box below to mark yourself as a brave Archmage.
         | Want to chat about what to do or how to get more deeply involved? 
         a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact") Contact us
