Contributor emails now indicate saved.

--- a/app/templates/contribute.jade
+++ b/app/templates/contribute.jade
@@ -40,8 +40,7 @@ block content
     li Artisans - Sootn, Aftermath, mcdavid1991
     li Scribes - Ryan Faidley
     li Adventurers - Kieizroe, (...)
-    li Archmages - David Golds, Zach Martin
-
+    li Archmages - David Golds, Zach Martin, Tom Steinbrecher, Mischa Lewis-Norelle, Sébastien Moratinos
 
   div#contribute-main
     div#intro
@@ -64,7 +63,7 @@ block content
         | , and we aim to provide as many ways as possible for you to take part and
         | make this project as much yours as ours.
       p We hope you'll join our party!
-      p.signature - Nick, George and Scott
+      p.signature - Nick, George, Scott, Michael, and Jeremy
       hr
 
     if me.attributes.anonymous
@@ -73,8 +72,6 @@ block content
         | To subscribe for class emails, you'll need to 
         a(data-toggle="coco-modal", data-target="modal/signup") create an account
         |  first .
-
-    h3 Changes are saved automatically when you toggle checkboxes.
 
     #archmage
       .class_image
@@ -113,6 +110,7 @@ block content
       label.checkbox(for="developer").well
         input(type='checkbox', name="developer", id="developer")
         | Get emails on new coding opportunities and announcements.
+        .saved-notification  ✓ Saved
 
 
     #artisan
@@ -150,6 +148,7 @@ block content
       label.checkbox(for="level_creator").well
         input(type='checkbox', name="level_creator", id="level_creator")
         | Get emails on level editor updates and announcements.
+        .saved-notification  ✓ Saved
 
 
     #adventurer
@@ -189,6 +188,7 @@ block content
       label.checkbox(for="tester").well
         input(type='checkbox', name="tester", id="tester")
         | Get emails when there are new levels to test.
+        .saved-notification  ✓ Saved
   
   
     #scribe
@@ -220,6 +220,7 @@ block content
       label.checkbox(for="article_editor").well
         input(type='checkbox', name="article_editor", id="article_editor")
         | Get emails about article writing announcements.
+        .saved-notification  ✓ Saved
 
 
 
@@ -252,6 +253,7 @@ block content
       label.checkbox(for="translator").well
         input(type='checkbox', name="translator", id="translator")
         | Get emails about i18n developments and levels to translate.
+        .saved-notification  ✓ Saved
     
   
     #ambassador
@@ -287,6 +289,7 @@ block content
       label.checkbox(for="support").well
         input(type='checkbox', name="support", id="support")
         | Get emails on support updates and multiplayer developments.
+        .saved-notification  ✓ Saved
   
   
     #counselor
