Tweaked the Archmage contribute copy.

--- a/app/templates/contribute.jade
+++ b/app/templates/contribute.jade
@@ -101,11 +101,12 @@ block content
       p
         | Anyone can help out! Just check out our 
         a(title='GitHub', href="https://github.com/codecombat/codecombat", tabindex=-1) GitHub
-        |  to get started, and check the box below to mark yourself as a brave Archmage.
+        |  to get started, and check the box below to mark yourself as a brave Archmage and get the latest news by email.
         | Want to chat about what to do or how to get more deeply involved? 
-        a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact") Contact us
-        | , tell us a little about yourself, what you've done and what you'd
-        | be interested in working on. We'll go from there!
+        a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact") Email us
+        | , or find us in our 
+        a(href="http://www.hipchat.com/g3plnOKqa") public HipChat room
+        |  and we'll go from there!
 
       label.checkbox(for="developer").well
         input(type='checkbox', name="developer", id="developer")
