Fix for announcement duplicates.

--- a/app/templates/contribute.jade
+++ b/app/templates/contribute.jade
@@ -40,7 +40,7 @@ block content
     li Artisans - Sootn, Aftermath, mcdavid1991
     li Scribes - Ryan Faidley
     li Adventurers - Kieizroe, (...)
-    li Archmages - David Golds, Zach Martin, Tom Steinbrecher, Mischa Lewis-Norelle, Sébastien Moratinos
+    li Archmages - David Golds, Zach Martin, Tom Steinbrecher, Mischa Lewis-Norelle, Sébastien Moratinos, Chloe Fan
 
   div#contribute-main
     div#intro
