Set up portrait uploading for thangs.

--- a/app/templates/editor/article/table.jade
+++ b/app/templates/editor/article/table.jade
@@ -8,6 +8,7 @@ table.table
     th Version
   
   for article in documents
+    - article = article.attributes;
     tr
       td
         a(href="/editor/article/#{article.slug || article._id}")
