--- a/app/templates/editor/thang/table.jade
+++ b/app/templates/editor/thang/table.jade
@@ -1,13 +1,18 @@
 table.table
   tr
-    th(colspan=3) Results: #{documents.length}
+    th(colspan=3) #{documents.length} results
   
   tr
+    th#portrait-col
     th Name
     th Version
   
   for thang in documents
+    - thang = thang.attributes;
+    - path = '/file/db/thang.type/'+thang.original+'/portrait.png'
     tr
+      td
+        img(src=path).portrait
       td
         a(href="/editor/thang/#{thang.slug || thang._id}")
           | #{thang.name}
