Added ContribueClassView, which all contribute pages are now based off of. Moved nav in to contribute_nav.jad, allowing for easier addition of nav to contribute pages.
Fixed other small bugs.

--- a/app/templates/contribute/contribute.jade
+++ b/app/templates/contribute/contribute.jade
@@ -4,25 +4,9 @@ block content
 
   div.contribute_class
 
-    ul.affix.nav.nav-list.nav-pills#contribute-nav
-      li
-        h3 Character Classes
-      li
-        a(href="#archmage") Archmage (Coder)
-      li
-        a(href="#artisan") Artisan (Level Builder)
-      li
-        a(href="#adventurer") Adventurer (Level Playtester)
-      li
-        a(href="#scribe") Scribe (Article Editor)
-      li
-        a(href="#diplomat") Diplomat (Translator)
-      li
-        a(href="#ambassador") Ambassador (Support)
-      li
-        a(href="#counselor") Counselor (Expert/Teacher)      
+    include /templates/contribute/contribute_nav    
 
-    div#contribute-main.class_main
+    div#contribute-main.class-main
       div#intro
 
         h2 Contributing
