--- a/app/templates/contribute/scribe.jade
+++ b/app/templates/contribute/scribe.jade
@@ -4,23 +4,7 @@ block content
 
   div.contribute_class
 
-    ul.contribute_class.affix.nav.nav-list.nav-pills#contribute-nav
-      li
-        h3 Character Classes
-      li
-        a(href="//contribute#archmage") Archmage (Coder)
-      li
-        a(href="//contribute#artisan") Artisan (Level Builder)
-      li
-        a(href="//contribute#adventurer") Adventurer (Level Playtester)
-      li
-        a(href="//contribute#scribe") Scribe (Article Editor)
-      li 
-        a(href="//contribute#diplomat") Diplomat (Translator)
-      li
-        a(href="//contribute#ambassador") Ambassador (Support)
-      li
-        a(href="//contribute#counselor") Counselor (Expert/Teacher)
+    include /templates/contribute/contribute_nav
 
     div.class-main#scribe-main
       
