--- a/app/styles/contribute_classes.sass
+++ b/app/styles/contribute_classes.sass
@@ -25,7 +25,7 @@
       float: none
       width: 100%
    
-  .class_main
+  .class-main
     margin-left: 25%
     padding: 40px
     box-sizing: border-box        
