--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -5,9 +5,10 @@
 
   $addPaletteIconColumns: 3
   $extantThangsWidth: 300px
-  $addPaletteIconWidth: 50px
-  $addPaletteIconPadding: 5px
-  $addPaletteWidth: ($addPaletteIconWidth + 2 * $addPaletteIconPadding) * $addPaletteIconColumns
+  $addPaletteIconWidth: 40px
+  $addPaletteIconPadding: 2px
+  $addPaletteIconMargin: 2px
+  $addPaletteWidth: ($addPaletteIconWidth + 2 * $addPaletteIconPadding + 2 * $addPaletteIconMargin) * $addPaletteIconColumns + 20
 
   .thangs-container
     width: $extantThangsWidth
@@ -59,30 +60,23 @@
       width: 100%
 
     .add-thang-palette-icon
-      // real img stuff
-      margin: $addPaletteIconPadding
-      max-width: $addPaletteIconWidth
-      max-height: $addPaletteIconWidth
+      position: relative
+      float: left
+      background: white
+      padding: $addPaletteIconPadding
+      margin: $addPaletteIconMargin
       cursor: pointer
-      transition: box-shadow 0.25s ease-out
 
-      // temp, text
-      display: inline-block
-      overflow: hidden
-      text-overflow: ellipsis
-      max-width: $addPaletteWidth
-  
+      img
+        width: $addPaletteIconWidth
+        height: $addPaletteIconWidth
+        transition: box-shadow 0.25s ease-out
+
       &.selected
         border: 1px solid blue
         margin: $addPaletteIconPadding - 1px
         @include box-shadow(0px 5px 25px rgba(79, 79, 213, 0.6))
-
-      &.flipped
-        -webkit-transform: scaleX(-1)
-        -moz-transform: scaleX(-1)
-        -ms-transform: scaleX(-1)
-        -o-transform: scaleX(-1)
-        transform: scaleX(-1)
+        background: #add8e6
 
   #canvas-wrapper
     width: 100%
