--- a/app/styles/editor/thang/edit.sass
+++ b/app/styles/editor/thang/edit.sass
@@ -1,57 +1,73 @@
 #editor-thang-type-edit-view
   #save-button
     float: right
+    margin-right: 20px
+    
+  #portrait
+    float: right
   
-  .control-row
+  .main-area
     padding: 5px
-    & > *
+    & > div.slider-cell
       margin-right: 5px
+      float: right
+    .file-controls
+      float: left
+      position: relative
+      top: 5px
+      left: 5px
+      button
+        margin-left: 5px
     select
       position: relative
       top: 5px
     input
       display: none
       
-  #state
-    position: absolute
-    top: 10px
-    left: 40%
-    right: 40%
-    height: 30px
-    text-align: center
-    font-size: 20px
-    line-height: 30px
-    text-transform: uppercase
-    
-  #canvas
-    float: right
-    width: 400px
-    
-  #settings-col
-    float: left
-    width: 550px
-    
-  .rotation-label
-    width: 45px
-    display: inline-block
-    margin-left: 5px
-    
   .slider-cell
     margin: 5px 0
     float: left
     width: 120px
-    
+
     .selector
       display: inline-block
       width: 100px
       position: relative
       top: 3px
-
-  #thang-components-edit-view
-    position: relative
-    height: 500px
-    top: -20px
     
-    .treema-root
-      background-color: white
-      border-radius: 4px
+  #canvas
+    float: right
+    width: 400px
+    border: 1px solid blue
+    
+  #settings-col
+    float: left
+    width: 550px
+    
+  #thang-type-treema
+    height: 400px
+    overflow: scroll
+    box-sizing: border-box
+    
+
+#thang-components-edit-view
+  position: relative
+  height: 500px
+  top: -20px
+  
+  .treema-root
+    background-color: white
+    border-radius: 4px
+
+#canvases
+  border: 1px solid green
+  max-width: 100%
+  max-height: 600px
+  overflow: scroll
+  clear: both
+  box-sizing: border-box
+  margin-bottom: 20px
+  canvas
+    background: darkseagreen
+    margin: 2px
+
