More tweaks to the thang editor.

--- a/app/styles/editor/thang/edit.sass
+++ b/app/styles/editor/thang/edit.sass
@@ -34,11 +34,18 @@
       width: 100px
       position: relative
       top: 3px
+      
+  #marker-button
+    float: right
+    margin-right: 10px
+    position: relative
+    top: 15px
     
   #canvas
     float: right
     width: 400px
     border: 1px solid blue
+    background-color: lightgray
     
   #settings-col
     float: left
