--- a/app/templates/editor/thang/edit.jade
+++ b/app/templates/editor/thang/edit.jade
@@ -30,7 +30,10 @@ block content
           button.btn.btn-small.btn-primary#clear-button
             i.icon-remove
           input#real-upload-button(type="file")
-        
+
+        button.btn.btn-small.btn-primary#marker-button
+          i.icon-map-marker
+
         div.slider-cell
           | Rotation:
           span.rotation-label
@@ -53,7 +56,7 @@ block content
       div#settings-col
         div#thang-type-treema
       
-      canvas#canvas(width="400", height="400", style="background-color:#999999")
+      canvas#canvas(width="400", height="400")
 
       .clearfix
 
