--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -24,7 +24,7 @@ body
             li.editor
               a(href='/editor', data-i18n="nav.editor") Editor
             li.blog
-              a(href='http://code-combat.tumblr.com/', data-i18n="nav.blog") Blog
+              a(href='http://blog.codecombat.com/', data-i18n="nav.blog") Blog
             li.forum
               a(href='http://discourse.codecombat.com/', data-i18n="nav.forum") Forum
             if me.isAdmin()
