Fixing bug with application require for now. Shoutout for Firebase.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -88,10 +88,9 @@ h1 h2 h3 h4
     padding-top: 25px
     text-align: center
 
-  .mixpanel-badge
-    display: block
+  .mixpanel-badge, .firebase-badge
     width: 100px
-    margin: 10px auto 0px
+    margin: 10px 10px 0px
 
 .footer-link-text a
   font-family: 'Bangers', cursive
@@ -103,7 +102,7 @@ h1 h2 h3 h4
 a[data-toggle="modal"]
   cursor: pointer
 
-.share-buttons
+.share-buttons, .partner-badges
   margin-top: 10px
   text-align: center
   @include opacity(75)
