--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -58,5 +58,8 @@ body
         .fb-like(data-href="https://www.facebook.com/codecombat", data-send="false", data-layout="button_count", data-width="350", data-show-faces="true", data-ref="coco_footer_#{fbRef}")
         a.twitter-follow-button(href="https://twitter.com/CodeCombat", data-show-count="true", data-show-screen-name="false", data-dnt="true", data-align="right", data-i18n="nav.twitter_follow") Follow
         //iframe(src="https://www.lendyour.net/embed/lendbutton?account_id=6&campaign_id=7", frameBorder="0")
+      .partner-badges
         a.mixpanel-badge(href="https://mixpanel.com/f/partner")
           img(src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png", alt="Mobile Analytics")
+        a.firebase-bade(href="https://www.firebase.com/")
+          img(src="/images/pages/base/firebase.png", alt="Powered by Firebase")
