Make language options menu right aligned instead of left aligned Remove horizontal scrollbar that is shown when vertical scrollbar is shown Changed top property to improve look

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -221,5 +221,10 @@ div.fancy-select
   ul.options
     max-height: 415px
     background-color: #9d8f5a
+    right: 0
+    left: auto
+    overflow-x: hidden
+    &.open
+      top: 36px
     li
       color: #ebebeb
