Set up talking portraits in the hud.

--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -60,7 +60,7 @@
     .no-selection-message
       display: none
 
-    .thang-image-wrapper, .speaker-image-wrapper
+    .thang-canvas-wrapper, .speaker-image-wrapper
       width: 100px
       height: 100px
       border: 1px solid darkred
@@ -71,9 +71,11 @@
 
       &.team-humans
         border-color: darkred
+        background-color: rgba(255,100,100,0.5)
 
       &.team-ogres
         border-color: darkblue
+        background-color: rgba(100,100,255,0.5)
 
     .thang-props
       width: 144px
