--- a/app/templates/modal/contact.jade
+++ b/app/templates/modal/contact.jade
@@ -1,3 +1,6 @@
+block modal-header-content
+  h3(data-i18n="contact.contact_modal_title") Contact
+
 .modal-header
   .button.close(type="button", data-dismiss="modal", aria-hidden="true") &times;
   h3(data-i18n="contact.contact_us") Contact CodeCombat...
