--- a/app/templates/modal/save_version.jade
+++ b/app/templates/modal/save_version.jade
@@ -1,5 +1,7 @@
 .modal-header
   h3 Save
+  block content
+    h3(data-i18n="save.save_version_title") Save New Version
 .modal-body
   block content
     form.form-horizontal
