Remove canvas wizard picture. Add in static wizard image.

--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -3,6 +3,11 @@
 
 #home-view
 
+  #wizard
+    float: left
+    margin-top: -44px
+    margin-left: -50px
+
   #front-screenshot
     margin-top: 15px
     margin-left: 150px
