--- a/app/templates/home.jade
+++ b/app/templates/home.jade
@@ -24,5 +24,5 @@ block content
 
     div.homepage_button
       a#beginner-campaign.btn.btn-warning.btn-large.highlight(href="/play/level/rescue-mission")
-        canvas(width="100px", height="100px")
+        img#wizard(src="/images/wizard.png", alt="Wizard", width="92", height="99")
         span(data-i18n="home.play") Play
