--- a/app/templates/modal/save_version.jade
+++ b/app/templates/modal/save_version.jade
@@ -1,6 +1,9 @@
-.modal-header
+extends /templates/modal/modal_base
+
+block modal-header-content
   h3(data-i18n="save.save_version_title") Save New Version
-.modal-body
+
+block modal-body-content
   form.form-horizontal
     .control-group
       label.control-label(for="commitMessage") Commit Message
@@ -11,7 +14,11 @@
       .controls
         input#major-version.input-large(name="version-is-major", type="checkbox")
         span.help-block
-.modal-footer
+
+block modal-body-wait-content
+  h3 Saving...
+
+block modal-footer-content
   #accept-cla-wrapper.alert.alert-info
     | To save changes, first you must agree to  
     strong#cla-link our CLA
@@ -20,7 +27,3 @@
     
   button.btn(data-dismiss="modal") Cancel
   button.btn.btn-primary#save-version-button Save
-.modal-body.wait.hide
-  h3 Saving...
-  .progress.progress-striped.active
-    .bar
